--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,19 +19,19 @@ jobs:
               with:
                 version: 1.7.34
 
-            - name: Mamba and environment installation
-              uses: mamba-org/setup-micromamba@v2
-              with:
-                  environment-file: environment.yml
-                  environment-name: quarto-env
-  
-            # - name: Install Python and Dependencies
-            #   uses: actions/setup-python@v5
+            # - name: Mamba and environment installation
+            #   uses: mamba-org/setup-micromamba@v2
             #   with:
-            #     python-version: '3.12'
-            #     cache: 'pip'
-            # - run: pip install jupyter
-            # - run: pip install -r requirements.txt 
+            #       environment-file: environment.yml
+            #       environment-name: quarto-env
+  
+            - name: Install Python and Dependencies
+              uses: actions/setup-python@v5
+              with:
+                python-version: '3.12'
+                cache: 'pip'
+            - run: pip install jupyter
+            - run: pip install -r requirements.txt 
 
             - name: Render and Publish
               uses: quarto-dev/quarto-actions/publish@v2
