--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -36,6 +36,7 @@ jobs:
             - name: Render and Publish
               uses: quarto-dev/quarto-actions/publish@v2
               with:
+                  path: .
                   target: gh-pages
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
