--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,3 +40,4 @@ jobs:
                   target: gh-pages
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              shell: micromamba-shell {0}
