--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,14 @@ project:
   type: website
 
 website:
-  title: "Quarto exemple"
+  title: "Quarto example"
+  navbar:
+    left:
+      - text: Home
+      - href: index.qmd
+    right:
+      - icon: github
+        href: https://github.com/seriesl/site_github
   sidebar:
     search: false
     style: "docked"
@@ -12,7 +19,6 @@ website:
 format:
   html:
     theme:
-      - cosmo
-      - brand
-    css: styles.css
+      - Darkly
+    # css: styles.css
     toc: true
